<resources>
    <string name="app_name">JPM NYC SCH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dbn">DBN:</string>
    <string name="test_takers">Test Takers:</string>
    <string name="reading_score">Reading Score:</string>
    <string name="math_score">Math Score:</string>
    <string name="writing_score">Writing Score:</string>
    <string name="error">Error</string>
    <string name="school_name">School Name:</string>
</resources>