<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailFragment">

        <Button
            android:id="@+id/btnList"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="Go back to List fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.889" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Detail Fragment"
            app:layout_constraintBottom_toTopOf="@+id/btnList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout> -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginTop="25dp"
        android:background="@color/royal_blue">

        <!-- DBN -->
        <TextView
            android:id="@+id/textViewDBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dbn"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailDbn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewDBN"
            app:layout_constraintTop_toTopOf="@+id/textViewDBN" />

        <!-- School Name -->
        <TextView
            android:id="@+id/textViewSchoolName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/school_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailDbn" />

        <TextView
            android:id="@+id/tvDetailSchoolName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewSchoolName"
            app:layout_constraintTop_toTopOf="@+id/textViewSchoolName"/>

        <!-- Number of SAT Test Takers -->
        <TextView
            android:id="@+id/textViewTestTakers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/test_takers"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSchoolName"/>

        <TextView
            android:id="@+id/tvTestTakers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewTestTakers"
            app:layout_constraintTop_toTopOf="@+id/textViewTestTakers" />

        <!-- SAT Critical Reading Average Score -->
        <TextView
            android:id="@+id/textViewReadingScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reading_score"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTestTakers" />

        <TextView
            android:id="@+id/tvReadingScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewReadingScore"
            app:layout_constraintTop_toTopOf="@+id/textViewReadingScore" />

        <!-- SAT Math Average Score -->
        <TextView
            android:id="@+id/textViewMathScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/math_score"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReadingScore" />

        <TextView
            android:id="@+id/tvMathScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewMathScore"
            app:layout_constraintTop_toTopOf="@+id/textViewMathScore" />

        <!-- SAT Writing Average Score -->
        <TextView
            android:id="@+id/textViewWritingScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/writing_score"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMathScore" />

        <TextView
            android:id="@+id/tvWritingScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewWritingScore"
            app:layout_constraintTop_toTopOf="@+id/textViewWritingScore" />

        <TextView
            android:id="@+id/list_error"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>